# Discord-Rich-Presence-For-Maya

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Discord.cpp  Discord.h  README.md  drpCmd.cpp  drpCmd.h  installer.py  pluginMain.cpp
module/config/: config.ini
module/scripts/RichPresenceUI/: RichPresenceUI.py  style.qss
src/: CMakeLists.txt  RichPresence.cpp  RichPresence.h  RichPresenceCmd.cpp  RichPresenceCmd.h  discord_register_win.cpp  pluginMain.cpp  serialization.h
